# tdd

./: .gitignore  CMakeLists.txt  README.md
solutions/: CMakeLists.txt
solutions/00 my first unit test/: README.md
solutions/00 my first unit test/cs/My First Unit Test/: My First Unit Test.csproj
solutions/00 my first unit test/cs/My First Unit Test tests/: My First Unit Test tests.csproj
solutions/01 leap year/cpp/LeapYear/: CMakeLists.txt
solutions/01 leap year/cs/LeapYear/: LeapYear.sln
solutions/01 leap year/cs/LeapYearTests/: LeapYearTests.csproj
solutions/01 prime number/: README.md
solutions/01 prime number/cpp/PrimeNumber/: CMakeLists.txt  PrimeNumber.sln
solutions/01 prime number/cs/PrimeNumber/: PrimeNumber.csproj  PrimeNumber.sln
solutions/01 prime number/cs/PrimeNumberTests/: PrimeNumberTests.csproj
solutions/01 string calculator/: README.md
solutions/01 string calculator/cpp/StringCalculator/: CMakeLists.txt  StringCalculator.sln
solutions/01 string calculator/cs/StringCalculator/: StringCalculator.csproj  StringCalculator.sln
solutions/01 string calculator/cs/StringCalculatorTests/: StringCalculatorTests.csproj
solutions/02 photosearcher/cpp/PhotoSearcher/: PhotoSearcher.sln
solutions/02 photosearcher/cs/PhotoSearcher/: Color.cs  IPhoto.cs
solutions/02 photosearcher/cs/PhotoSearcherTests/: PhotoSearcherTests.csproj
solutions/03 annoying blobs/: README.md
solutions/03 annoying blobs/cpp/AnnoyingBlobs/: AnnoyingBlobs.sln
solutions/03 annoying blobs/cs/AnnoyingBlobs/: AnnoyingBlobs.csproj  AnnoyingBlobs.sln  DataAdder.cs
(+191 files in other folders)
