cmake_minimum_required(VERSION 2.8.2)

project(solutions)

add_subdirectory("00 my first unit test/cpp/My first unit test")
add_subdirectory("01 leap year/cpp/LeapYear")
add_subdirectory("01 prime number/cpp/PrimeNumber")
add_subdirectory("01 string calculator/cpp/StringCalculator")
add_subdirectory("02 photosearcher/cpp/PhotoSearcher")
add_subdirectory("03 annoying blobs/cpp/AnnoyingBlobs")
add_subdirectory("03 cruisecontrol/cpp/CruiseControl")
add_subdirectory("04 a dirty job/cpp/ADirtyJob")
